# wildboar_scop

./: CMakeLists.txt  Makefile  README.md  build_scop.sh  main.c
bmp_process/: bmp_proc_ctor.c  bmp_proc_dtor.c  bmp_process.h  delete_bmpProc.c  new_bmpProc.c  test_bmp_process.c
glad/include/glad/: glad.h
glad/src/: glad.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
matrix/: delete_matrix.c  matrix.h  matrix.h.autosave  matrix_add.c  matrix_ctr.c  matrix_ctr_2.c  matrix_ctr_glspec.c  matrix_dtr.c  matrix_multi.c  matrix_multi_rev.c  matrix_multi_rev_ret.c  matrix_perspective.c  matrix_perspective_ret.c  matrix_rev_x.c  matrix_rev_y.c  matrix_rev_z.c  matrix_scal_add.c  matrix_scal_multi.c  matrix_scale.c  matrix_test.c  matrix_trans.c  new_matrix.c  new_matrix_2.c  new_matrix_glspec.c
models/resources/: 42.mtl
train/: 3DPyramid.c  InterleavedArray.c  exc_2.c  gflw_exc_2vao_2vbo.cpp  gflw_time_green.c  glDrawArrays.c  glDrawElementsCircle.c  glLineStipple.c  glPolygonStipple.c  glWindow.c  glfw_1_window.cpp  glfw_elembuffer_sample_3.cpp  glfw_funny_face.c  glfw_icosahedron3d.c  glfw_matrix_transform.c  glfw_rotating_cube.c  glfw_sample.cpp  glfw_sample_2.cpp  glfw_simple_basics.c  glfw_texture_sample.c  glfw_tri_palete.c  glfw_triangle_test.cpp  glfw_triforce.cpp  glfw_view_transform.c  glfw_window_test.cpp  glutRotateCube.c  icosahedron_3d.c  rb_glutwindow_square.c  transform_cube.c  transforms_experims.c  triangle_train.c
wavefront_obj_loader/: delete_wavefront_obj_loader.c  new_wavefront_obj_loader.c  wavefront_obj_loader.h  wavefront_obj_loader_ctr.c  wavefront_obj_loader_dtr.c  wavefront_obj_loader_test.c
