cmake_minimum_required(VERSION 3.7.2)
project(wildboar_scop C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_COMPILER clang)
# set_source_files_properties(./glad/src/glad.c PROPERTIES LANGUAGE CXX )
add_compile_options(-g)

add_executable(${PROJECT_NAME} ./train/exc_2.c ./glad/src/glad.c)
target_include_directories(${PROJECT_NAME} PUBLIC ./glad/include/)
target_include_directories(${PROJECT_NAME} PUBLIC /opt/homebrew/Cellar/glfw/3.3.8/include/)
target_link_directories(${PROJECT_NAME} PUBLIC "/opt/homebrew/lib")
target_link_libraries(${PROJECT_NAME} PUBLIC -lglfw)
target_link_libraries(${PROJECT_NAME} PUBLIC "-framework Cocoa")
target_link_libraries(${PROJECT_NAME} PUBLIC "-framework OpenGL")

#if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
#   add_executable(${PROJECT_NAME} train/glfw_icosahedron3d.c)
#    add_executable(${PROJECT_NAME} train/glfw_funny_face.c)
#    message("You're on MacOS X")
#    find_package(OpenGL REQUIRED)

#    include_directories(${OPENGL_INCLUDE_DIRS} "/opt/homebrew/include/")
#    target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} -L"/opt/homebrew/lib/" -lglfw
#            -L"/opt/homebrew/lib/" -lGLEW -lm)
#elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
#    add_executable(${PROJECT_NAME} train/glfw_funny_face.c)
#    message("You're on Linux")
#    target_link_libraries(${PROJECT_NAME} -lglut -lGLU -lGL -lX11 -lpthread -lXrandr -lXi -ldl -lm)
#else()
#    message("OS is not detected")
#endif()